xtask/tests/snapshots/directive_snapshots__error_snapshot.snap
---
source: xtask/tests/directive_snapshots.rs
expression: "xtask::corpus::parse_directives(\"//! phase: sema\\n\")"
---
Err(
    "line 1: unknown phase `sema` (canonical: none, lex, parse, resolve, typecheck, mem, wir, run)",
)
