xtask/tests/snapshots/directive_snapshots__forward_pin_snapshot.snap
---
source: xtask/tests/directive_snapshots.rs
expression: "xtask::corpus::parse_directives(src)"
---
Ok(
    Directives {
        check: Some(
            Fail(
                "E1003",
            ),
        ),
        phase: Some(
            "resolve",
        ),
        conforms: [
            "mem.tier0.borrow.1",
        ],
        warns: [],
        member: None,
        forward: Some(
            "borrow expressions",
        ),
        relaid: false,
    },
)
